# todo-list-backend

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.test-cov.yml  docker-compose.yml  pyproject.toml
app/: __init__.py
app/api/: __init__.py  deps.py
app/api/routes/: __init__.py  task.py  user.py
app/crud/: __init__.py  base.py  task.py  user.py
app/db/: __init__.py
app/db/sql/: 1_users.sql  2_task.sql  users.sql
app/schemas/: __init__.py  task.py  user.py
app/tests/: test_delete.py
tests/: test_post.py
