[tool.poetry]
name = "Project"
version = "0.1.0"
description = ""
authors = ["Olof333"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.65.1"
fastapi-utils = "^0.2.1"
Jinja2 = "^3.0.1"
aiofiles = "^0.7.0"
uvicorn = "^0.14.0"
python-multipart = "^0.0.5"
mysql-connector-python = "^8.0.23"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
