[tool.poetry]
name = "Project"
version = "0.1.0"
description = ""
authors = ["Olof333"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.65.1"
fastapi-utils = "^0.2.1"
Jinja2 = "^3.0.1"
aiofiles = "^0.7.0"
uvicorn = "^0.14.0"
python-multipart = "^0.0.5"
mysql-connector-python = "^8.0.23"
pydantic = {extras = ["email"], version = "^1.8.2"}
pytest-cov = "^2.12.1"
setuptools = "^57.4.0"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
